@@ -16,6 +16,7 @@ Slated for 2.21.0
 - Changed: Reflect.getEnumInstance() is now public.
 - Changed: Reflect.createForType(...) can now handing converting Enums to other 
   types.
+- Added: AbstractTrie.clear().
 
 Changed in 2.20.2
 =================
